[Java] LSP-425 Refactoring IntroduceVariableBase
- Create better structure for IntroduceVariableBase#getTempContainer
- Use better return type in IntroduceVariableUtil#getIntroduceVariableCandidates

GitOrigin-RevId: 3627b2928d974c977a6d89d18ad0f37792b3ba1c